# CoupledEPCondensates

./: .gitignore  Fig_S14.ipynb  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  setup.sh
notes/: 20231007.qmd  20231120.html  20231120.qmd  20240107.qmd  20240122.qmd  20240124.qmd  _quarto.yml
notes/_output/: 20231120.html  20240107.html  20240124.html
utils/: dynamical_equations.py  file_operations.py  free_energy.py  plot.py  reaction_rates.py  sim_tools.py  simulation_helper.py
utils/analysis/: condensate_property_plot.py  condensate_property_plot.slurm  make_movie.py  make_movie.slurm  make_movies.py  make_movies.slurm  make_snapshot.py  make_stats.py  tools.py
utils/scripts/: run_simulation.py  run_simulation.slurm  sweep_movies.py  sweep_parameters.py  sweep_stats.py
workspace/: .gitignore  20231007_CoupledEPCondensates.ipynb  20231007_WLC.ipynb  _quarto.yml
workspace/00_Misc/: 20240802_Integrals.ipynb  20240802_Quantification.ipynb  20240803_GetParameters.ipynb  Fig_S1-S8-S9-S10.ipynb  Fig_S5-S15-S16-S17.ipynb  Manifest.toml  Project.toml  hill.ipynb
workspace/01_Analysis/: 20240218_ProductionRate.ipynb  20240218_SurfaceTension.ipynb  20240224_Observables.ipynb  20240331_TransientDiagrams.ipynb  20240722_size.ipynb  20241123_Touch.ipynb  Fig_1B.ipynb  Fig_1B_I-II-III.ipynb  Fig_S1-S2-S3.ipynb
workspace/02_Analysis/: 20240327_BondedForce.ipynb
workspace/04_Analysis/: 20240120_SpringPhaseDiagram copy.ipynb  20240120_SpringPhaseDiagram.ipynb  20240123_Radial.ipynb  20240127_SpringPhaseDiagram.ipynb  20240218_PhaseDiagramMoves.ipynb  (+6 more)
(+75 files in other folders)
