[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Pradeep Natarajan <pradeepn@mit.edu>", "David David <davidgoh@mit.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.11"
FiPy = "^3.4.4"
tqdm = "^4.66.1"
h5py = "^3.9.0"
pandas = "^2.1.1"
seaborn = "^0.13.0"
ipykernel = "^6.25.2"
matplotlib = "~3.7"
jupyterlab = "^4.0.7"
moviepy = "^1.0.3"
scienceplots = "^2.1.0"
opencv-python = "^4.8.1.78"
scikit-learn = "^1.3.2"
alphashape = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
